<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="222dp"
            android:background="@mipmap/ic_stock_pop_bg"
            android:layout_height="60dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="46dp"
                      android:gravity="center_vertical"
                      android:orientation="horizontal">
            <TextView
                    android:id="@+id/tv_sticky_on_top"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/sticky_on_top"
                    android:gravity="center"
                    android:textColor="@color/color_FFFFFFFF"
                    android:textSize="19sp"/>

            <View android:layout_width="1dp"
                  android:layout_height="match_parent"
                  android:layout_marginTop="2dp"
                  android:background="@color/color_FFFFFFFF"
                  android:layout_marginBottom="2dp"/>

            <TextView
                    android:id="@+id/tv_remind"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/remind"
                    android:gravity="center"
                    android:textColor="@color/color_FFFFFFFF"
                    android:textSize="19sp"/>

            <View android:layout_width="1dp"
                  android:layout_height="match_parent"
                  android:layout_marginTop="2dp"
                  android:background="@color/color_FFFFFFFF"
                  android:layout_marginBottom="2dp"/>

            <TextView
                    android:id="@+id/tv_delete"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/delete"
                    android:gravity="center"
                    android:textColor="@color/color_FFFFFFFF"
                    android:textSize="19sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>