<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="viewModel"
                  type="com.zhuorui.securities.market.ui.viewmodel.RemindSettingViewModel"/>

    </data>

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:background="@color/tab_bar_bg"
                  android:layout_height="match_parent">

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="50dp">

            <ImageView android:layout_width="13dp"
                       android:layout_height="20dp"
                       android:id="@+id/iv_back"
                       android:layout_marginStart="13dp"
                       android:layout_centerVertical="true"
                       android:background="@mipmap/back_arrows"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="20sp"
                      android:textStyle="bold"
                      android:layout_centerInParent="true"
                      android:textColor="@color/color_FFFFFFFF"
                      android:text="@string/setting_remind"/>
        </RelativeLayout>

        <RelativeLayout
                android:background="@color/color_D7D7D7"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="30dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/unable_notice"
                    android:layout_marginStart="13dp"
                    android:textColor="@color/color_ff282828"
                    android:textSize="14sp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_notice"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="13dp"
                    android:drawablePadding="8dp"
                    android:drawableEnd="@mipmap/ic_small_close"
                    android:textColor="@color/color_ff1a6ed2"
                    android:textSize="14sp"/>
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@color/color_35373E"
                android:layout_marginTop="5dp"
                android:layout_height="51dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="中国平安"
                    android:textColor="@color/color_FFFFFFFF"
                    android:textSize="17sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/textView"/>

            <ImageView android:layout_width="12dp"
                       android:layout_height="10dp"
                       android:layout_marginBottom="10dp"
                       android:layout_marginStart="14dp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintBottom_toBottomOf="parent"
                       android:src="@mipmap/ic_ts_sz"
                       android:id="@+id/imageView"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="601318"
                    android:textColor="@color/color_ff8b93a8"
                    android:textSize="10sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    android:includeFontPadding="false"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    android:layout_marginStart="3dp"
                    tools:ignore="SmallSp" android:id="@+id/textView2"/>

            <TextView
                    android:id="@+id/tv_now_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diff_price"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/color_ffa4b2cb"
                    android:textSize="13sp"
                    android:layout_marginEnd="38dp"
                    app:layout_constraintEnd_toStartOf="@id/tv_diff_pirce"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="86.50"
                    android:textColor="@color/color_FF0000"
                    android:textSize="14sp"
                    android:layout_marginBottom="7dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:includeFontPadding="false"
                    tools:ignore="MissingConstraints"
                    app:layout_constraintEnd_toEndOf="@+id/tv_now_price"
                    app:layout_constraintStart_toStartOf="@+id/tv_now_price"/>

            <TextView
                    android:id="@+id/tv_diff_pirce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diff_price"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/color_ffa4b2cb"
                    android:textSize="13sp"
                    android:layout_marginEnd="38dp"
                    app:layout_constraintEnd_toStartOf="@id/tv_diff_rate"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+2.15"
                    android:textColor="@color/color_FF0000"
                    android:textSize="14sp"
                    android:includeFontPadding="false"
                    android:layout_marginBottom="7dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="MissingConstraints"
                    app:layout_constraintEnd_toEndOf="@+id/tv_diff_pirce"
                    app:layout_constraintStart_toStartOf="@+id/tv_diff_pirce"/>

            <TextView
                    android:id="@+id/tv_diff_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/updown"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/color_ffa4b2cb"
                    android:textSize="13sp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.55%"
                    android:textColor="@color/color_FF0000"
                    android:textSize="14sp"
                    android:layout_marginBottom="7dp"
                    android:includeFontPadding="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="MissingConstraints"
                    app:layout_constraintEnd_toEndOf="@+id/tv_diff_rate"
                    app:layout_constraintStart_toStartOf="@+id/tv_diff_rate"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
                android:layout_marginTop="13dp"
                android:layout_width="match_parent"
                android:background="@color/color_35373E"
                android:layout_height="50dp">

            <ImageView
                    android:id="@+id/ic_rise_arrow"
                    android:layout_width="11dp"
                    android:layout_height="18dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="14dp"
                    android:src="@mipmap/ic_rise_arrow"/>

            <TextView
                    android:id="@+id/tv_rise_threshold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rise_threshold"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/ic_rise_arrow"
                    android:textColor="@color/color_FFFFFFFF"
                    android:textSize="17sp"/>

            <androidx.appcompat.widget.AppCompatEditText android:layout_width="60dp"
                      android:background="@color/color_000000"
                      android:layout_marginStart="10dp"
                      android:includeFontPadding="false"
                      android:gravity="center"
                      android:textSize="12sp"
                      android:layout_centerVertical="true"
                      android:text="0.0"
                      android:textColor="@color/color_A1A1A1"
                      android:layout_toEndOf="@+id/tv_rise_threshold"
                      android:layout_height="17dp"/>

            <ImageButton android:layout_width="46dp"
                         android:layout_height="26dp"
                         android:layout_centerVertical="true"
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="13dp"
                         android:src="@mipmap/ic_switch_close"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_marginTop="1dp"
                android:layout_width="match_parent"
                android:background="@color/color_35373E"
                android:layout_height="50dp">

            <ImageView
                    android:id="@+id/ic_down_arrow"
                    android:layout_width="11dp"
                    android:layout_height="18dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="14dp"
                    android:src="@mipmap/ic_down_arrow"/>

            <TextView
                    android:id="@+id/tv_down_threshold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/down_threshold"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/ic_down_arrow"
                    android:textColor="@color/color_FFFFFFFF"
                    android:textSize="17sp"/>

            <androidx.appcompat.widget.AppCompatEditText android:layout_width="60dp"
                      android:background="@color/color_000000"
                      android:layout_marginStart="10dp"
                      android:includeFontPadding="false"
                      android:gravity="center"
                      android:textSize="12sp"
                      android:layout_centerVertical="true"
                      android:text="0.0"
                      android:textColor="@color/color_A1A1A1"
                      android:layout_toEndOf="@+id/tv_down_threshold"
                      android:layout_height="17dp"/>

            <ImageButton android:layout_width="46dp"
                         android:layout_height="26dp"
                         android:layout_centerVertical="true"
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="13dp"
                         android:src="@mipmap/ic_switch_close"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_marginTop="1dp"
                android:layout_width="match_parent"
                android:background="@color/color_35373E"
                android:layout_height="50dp">

            <ImageView
                    android:id="@+id/ic_rise_range"
                    android:layout_width="18dp"
                    android:layout_height="11dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_rise_range"/>

            <TextView
                    android:id="@+id/tv_price_threshold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rise_range"
                    android:layout_marginStart="15dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/ic_rise_range"
                    android:textColor="@color/color_FFFFFFFF"
                    android:textSize="17sp"/>

            <EditText android:layout_width="60dp"
                      android:background="@color/color_000000"
                      android:layout_marginStart="19dp"
                      android:includeFontPadding="false"
                      android:gravity="center"
                      android:textSize="12sp"
                      android:layout_centerVertical="true"
                      android:text="0.0"
                      android:textColor="@color/color_A1A1A1"
                      android:layout_toEndOf="@+id/tv_price_threshold"
                      android:layout_height="17dp"/>

            <ImageButton android:layout_width="46dp"
                         android:layout_height="26dp"
                         android:layout_centerVertical="true"
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="13dp"
                         android:src="@mipmap/ic_switch_close"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_marginTop="1dp"
                android:layout_width="match_parent"
                android:background="@color/color_35373E"
                android:layout_height="50dp">

            <ImageView
                    android:id="@+id/ic_down_range"
                    android:layout_width="18dp"
                    android:layout_height="11dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_down_range"/>

            <TextView
                    android:id="@+id/tv_down_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/down_range"
                    android:layout_marginStart="15dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/ic_down_range"
                    android:textColor="@color/color_FFFFFFFF"
                    android:textSize="17sp"/>

            <androidx.appcompat.widget.AppCompatEditText android:layout_width="60dp"
                      android:background="@color/color_000000"
                      android:layout_marginStart="19dp"
                      android:includeFontPadding="false"
                      android:gravity="center"
                      android:textSize="12sp"
                      android:layout_centerVertical="true"
                      android:text="0.0"
                      android:textColor="@color/color_A1A1A1"
                      android:layout_toEndOf="@+id/tv_down_range"
                      android:layout_height="17dp"/>

            <ImageButton android:layout_width="46dp"
                         android:layout_height="26dp"
                         android:layout_centerVertical="true"
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="13dp"
                         android:src="@mipmap/ic_switch_open"/>
        </RelativeLayout>
    </LinearLayout>
</layout>